--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</a>
 				<button title="OnlyFans page" id="onlyfans" style="display: none;">
 					<div class="logo_container">
-						<img draggable="false" src="https://cdn.worldvectorlogo.com/logos/onlyfans-2.svg" />
+						<img draggable="false" src="/assets/onlyfans/logo.svg" />
 					</div>
 					<h3 translate="no">onlyfans</h3>
 				</button>
