lowercase first letter of no-js warning

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<span translate="no" id="ua_flag"><img draggable="false" alt="Ukrainian flag" src="./assets/ukrainian_flag.svg"/></span>Ukrainian born in 2007
 			</h3>
 			<h2 id="stuff_title" class="title">my stuff</h2>
-			<h3 id="js_warning">Enable JavaScript for extended button functionality</h3>
+			<h3 id="js_warning">enable JavaScript for extended button functionality</h3>
 			<script>
 				document.querySelector("h3#js_warning").remove();
         document.currentScript.remove();
