Fix lib_text focus without js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<main>
-			<h6 tabindex="0" id="lib_text">made with no libraries</h6>
+			<h6 id="lib_text">made with no libraries</h6>
 			<h1 class="title" translate="no">meqativ</h1>
 			<div class="pfp">
 				<img tabindex="0" class="avatar" alt="avatar" src="./assets/avatar.png"/>
@@ -30,7 +30,7 @@
         document.currentScript.remove();
 			</script>
 			<ul class="buttons">
-				<a href="https://github.com/Meqativ/home">
+				<a href="https://github.com/meqativ/home">
 					<button id="src_btn" title="Source code of this page">
 						<div class="logo_container">
 							<picture>
