try 2 fix the embed iamge

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 	  <script preload type="module" defer src="script.js"></script>
     <link preload href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
-  	<link preload href="https://meqativ.github.io/home/assets/favicon.svg" rel="icon" type="image/svg+xml" />
+  	<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
 		<link preload href="style.css" rel="stylesheet" type="text/css" />
 		<meta property="og:title" content="meqativ"/>
-		<meta property="og:thumbnail" content="./assets/avatar.png" />
+		<meta property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
 		<meta name="theme-color" content="#8800ff" />
 		<meta name="color-scheme" content="dark light" />
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
