try 3 fix the embed image in telegram

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   	<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
 		<link preload href="style.css" rel="stylesheet" type="text/css" />
 		<meta property="og:title" content="meqativ"/>
-		<meta property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
+		<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
 		<meta name="theme-color" content="#8800ff" />
 		<meta name="color-scheme" content="dark light" />
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
