try 4 fix the embed image in telegram

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<link preload href="style.css" rel="stylesheet" type="text/css" />
 		<meta property="og:title" content="meqativ"/>
 		<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
-		<meta name="theme-color" content="#8800ff" />
+    <meta content="origin" name="referrer">
+    <meta name="theme-color" content="#8800ff" />
 		<meta name="color-scheme" content="dark light" />
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta charset="utf-8" />
