--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						</div>
 						<h3 translate="no" style="width: 100%; opacity: 1;">telegram</h3>
 						<h3 style="width: 0px; opacity: 0; text-align: center; font-size: 0px;">channel</h3>
-						<div tabindex="0" role="button" aria-pressed="false" style="display: none; transform: rotate(0turn);" class="logo_container pointer"><</div>
+						<div aria-label="Expand buttons below" tabindex="0" role="button" aria-pressed="false" style="display: none; transform: rotate(0turn);" class="logo_container pointer"><</div>
 					</button>
 				</a>
 				<div closed="true" style="display: none;" class="telegram-btns">
