Prepare fireinthehole sfx

--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
 					</button>
 				</a>
 				<a href="https://gdbrowser.com/u/meqativ">
-					<button title="Geometry Dash account on GD Browser">
+					<button id="fireinthehole" title="Geometry Dash account on GD Browser">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/gd/logo_2.1.png" />
 						</div>
 						<h3 translate="no">geometry dash</h3>
 					</button>
 				</a>
-                                <a href="https://mega.nz/file/mP4g0Q4J#VkuR60hxDlfnbaezUKJJc5YdDoKJGZg_GQbULOuH25M">
-					<button title="Geometry Dash 2.2 android apk file download">
+        <a href="https://mega.nz/file/mP4g0Q4J#VkuR60hxDlfnbaezUKJJc5YdDoKJGZg_GQbULOuH25M">
+					<button id="fireinthehole" title="Geometry Dash 2.2 android apk file download">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/gd/logo_2.1.png" />
 							<img draggable="false" src="./assets/meganz.png" />
