--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1 class="title" translate="no">meqativ</h1>
 			<div class="pfp">
 				<img tabindex="0" class="avatar" alt="avatar" src="./assets/avatar.png"/>
-				<img class="overlay" alt="christmas overlay" src="./assets/jollyoverlay.png"/>
+				<!--img class="overlay" alt="christmas overlay" src="./assets/jollyoverlay.png"/-->
 			</div>
 			<h3 tabindex="0" id="bio">
 				<span translate="no" id="ua_flag"><img draggable="false" alt="Ukrainian flag" src="./assets/ukrainian_flag.svg"/></span>Ukrainian born in 2007
