--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
 						<h3 translate="no">geometry dash</h3>
 					</button>
 				</a>
-        <a href="https://mega.nz/file/mP4g0Q4J#VkuR60hxDlfnbaezUKJJc5YdDoKJGZg_GQbULOuH25M">
+				<a href="https://mega.nz/file/mP4g0Q4J#VkuR60hxDlfnbaezUKJJc5YdDoKJGZg_GQbULOuH25M">
 					<button id="fireinthehole" title="Geometry Dash 2.2 android apk file download">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/gd/logo_2.1.png" />
 							<img draggable="false" src="./assets/meganz.png" />
 						</div>
-						<h3 translate="no">gd 2.2 .apk i Love piracy</h3>
+						<h3 translate="no">gd 2.2 .apk<br/>i Love piracy</h3>
 					</button>
 				</a>
 				<a href="https://nebo.mobi/tower/id/20284549">
