--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	  <script preload type="module" defer src="./script.js"></script>
-    <link preload href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
-  	<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
+	  	<script preload defer src="./script.js"></script>
+    		<link preload href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+  		<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
 		<link preload href="style.css" rel="stylesheet" type="text/css" />
 		<meta property="og:title" content="meqativ"/>
 		<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
