--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <p><strong>That is my favorite number.</strong></p>
 
       <p>
-        <a href="/index_old.html">The previous version of this site</a> has been deprecated due to a lack of funding.
+        <a href="./index_old.html">The previous version of this site</a> has been deprecated due to a lack of funding.
         Though, i'm <strong>meqativ</strong>, a 🇺🇦 Ukrainian human born in 2007
       </p>
 
