--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!D_OCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
 	<head>
-	  	<script preload defer src="./script.js"></script>
-    		<link preload href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
-  		<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
+		<script preload defer src="./script.js"></script>
+		<link preload href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+		<link preload href="./assets/favicon.svg" rel="icon" type="image/svg+xml" />
 		<link preload href="style.css" rel="stylesheet" type="text/css" />
 		<meta property="og:title" content="meqativ"/>
 		<meta itemprop="image" property="og:image" content="https://meqativ.github.io/home/assets/avatar.png" />
-    <meta content="origin" name="referrer">
-    <meta name="theme-color" content="#8800ff" />
+		<meta content="origin" name="referrer">
+		<meta name="theme-color" content="#8800ff" />
 		<meta name="color-scheme" content="dark light" />
 		<meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta charset="utf-8" />
@@ -18,9 +18,8 @@
 		<main>
 			<h6 id="lib_text">made with no libraries</h6>
 			<h1 class="title" translate="no">meqativ</h1>
-			<div class="pfp">
-				<img tabindex="0" class="avatar" alt="avatar" src="./assets/avatar.png"/>
-				<!--img class="overlay" alt="christmas overlay" src="./assets/jollyoverlay.png"/-->
+			<div class="pfp" tabindex="0" alt="my avatar">
+				<img class="avatar" src="./assets/avatar.png"/>
 			</div>
 			<h3 tabindex="0" id="bio">
 				<span translate="no" id="ua_flag"><img draggable="false" alt="Ukrainian flag" src="./assets/ukrainian_flag.svg"/></span>Ukrainian born in 2007
@@ -29,7 +28,7 @@
 			<h3 id="js_warning">enable JavaScript for extended button functionality</h3>
 			<script>
 				document.querySelector("h3#js_warning").remove();
-        document.currentScript.remove();
+				document.currentScript.remove();
 			</script>
 			<ul class="buttons">
 				<a href="https://github.com/meqativ/home">
@@ -80,8 +79,7 @@
 					</button>
 				</a>
 				<a href="https://discord.com/users/744276454946242723">
-
-					<button title="Discord user profile. Slow response time, even if you're able to send a message. preferably use telegram">
+					<button title="Discord user profile">
 						<div class="logo_container">
 							<picture>
 								<img draggable="false" src="./assets/discord/blurple/logo.svg" />
