add youtube musick playlist and alt text

--- a/index.html
+++ b/index.html
@@ -44,15 +44,23 @@
 					</button>
 				</a>
 				<a href="https://youtube.com/@meqativ">
-					<button title="YouTube channel">
+					<button title="my YouTube channel. i don't upload often or have a specific theme'">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/youtube/logo.svg" />
 						</div>
 						<h3 translate="no">youtube</h3>
 					</button>
 				</a>
+				<a href="https://music.youtube.com/playlist?list=PL402t-SEYe1A-wxd-DPvbdFZlcfkhJn7v">
+					<button title="my YouTube Music playlist. i usually put it on loop or start a radio from it">
+						<div class="logo_container">
+							<img draggable="false" src="./assets/youtube/music_logo.svg" />
+						</div>
+						<h3 translate="no">YTM playlist</h3>
+					</button>
+				</a>
 				<a href="https://discord.com/users/744276454946242723">
-					<button title="Discord user profile">
+					<button title="my Discord user profile">
 						<div class="logo_container">
 							<picture>
 								<img draggable="false" src="./assets/discord/blurple/logo.svg" />
@@ -62,7 +70,7 @@
 					</button>
 				</a>
 				<a href="https://twitter.com/meqativ">
-					<button title="Twitter account" id="x">
+					<button title="my Twitter account. i often repost cute safe art there" id="x">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/x/logo_old.png" />
 						</div>
@@ -73,7 +81,7 @@
 					</button>
 				</a>
 				<a href="https://github.com/meqativ">
-					<button title="Github account">
+					<button title="my Github account. i do code,, sometime">
 						<div class="logo_container">
 							<picture>
 								<source srcset="./assets/github/white/logo.svg" media="(prefers-color-scheme: dark)"/>
@@ -84,7 +92,7 @@
 					</button>
 				</a>
 				<a href="https://last.fm/user/meqativ">
-					<button title="Last.fm profile">
+					<button title="my Last.fm profile">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/last.fm/logo.png" />
 						</div>
@@ -92,7 +100,7 @@
 					</button>
 				</a>
 				<a href="https://twitch.com/meqativ">
-					<button title="Twitch account">
+					<button title="my Twitch account. it exists just to exist, i dont stream">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/twitch/logo.svg" />
 						</div>
@@ -100,21 +108,21 @@
 					</button>
 				</a>
 				<a href="https://rooflomg.newgrounds.com/">
-					<button title="Newgrounds page">
+					<button title="my Newgrounds page. nothing useful there">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/newgrounds/logo.png" />
 						</div>
 						<h3 translate="no">newgrounds</h3>
 					</button>
 				</a>
-				<button title="OnlyFans page" id="onlyfans" style="display: none;">
+				<button title="my OnlyFans page. what?" id="onlyfans" style="display: none;">
 					<div class="logo_container">
 						<img draggable="false" src="./assets/onlyfans/blue/logo.svg" />
 					</div>
 					<h3 translate="no">onlyfans</h3>
 				</button>
 				<a href="https://bandcamp.com/meqativ">
-					<button title="Bandcamp listener profile">
+					<button title="my Bandcamp listener profile. i support creators i like when i can">
 						<div class="logo_container">
 							<picture>
 								<source draggable="false" srcset="./assets/bandcamp/aqua/logo.png" media="(prefers-color-scheme: dark)"/>
@@ -125,7 +133,7 @@
 					</button>
 				</a>
 				<a href="https://odysee.com/@meqativ:9">
-					<button title="Odysee channel">
+					<button title="my Odysee channel. i literally do not use this platform, IDKwhy i have an account there">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/odysee/logo_2023.png" />
 						</div>
@@ -133,7 +141,7 @@
 					</button>
 				</a>
 				<a href="https://instagram.com/meqativ_">
-					<button title="Instagram profile. I dont use it often, it just exists.. Don't expect a reply from me there">
+					<button title="my Instagram profile. i dont use it often, only made to see reals from my friends better">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/instagram/logo.svg" />
 						</div>
@@ -141,7 +149,7 @@
 					</button>
 				</a>
 				<a href="https://lazer.ppy.sh/users/33649721/mania">
-					<button title="Osu player profile">
+					<button title="my Osu profile. i play quite often">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/osu/logo.png" />
 						</div>
@@ -149,29 +157,21 @@
 					</button>
 				</a>
 				<a href="https://gdbrowser.com/u/meqativ">
-					<button id="fireinthehole" title="Geometry Dash account on GD Browser">
+					<button title="my Geometry Dash account on GD Browser. i dont play often due to motivation">
 						<div class="logo_container">
 							<img draggable="false" class="round" src="./assets/gd/logo_2.1.png" />
 						</div>
 						<h3 translate="no">geometry dash</h3>
 					</button>
 				</a>
-				<a href="https://nebo.mobi/tower/id/20284549">
-					<button title="Небоскрёб в игре Небоскрёбы">
-						<div class="logo_container">
-							<img draggable="false" class="round" src="./assets/nebosrkeby/logo.png" />
-						</div>
-						<h3 translate="no">небоскрёбы</h3>
-					</button>
-				</a>
 				<a href="https://t.me/paketmeqa/1482">
-					<button id="tg" title="Telegram channel">
+					<button id="tg" title="my Telegram channel">
 						<div class="logo_container">
 							<img draggable="false" src="./assets/telegram/logo.svg" />
 						</div>
-						<h3 translate="no" style="width: 100%; opacity: 1;">telegram</h3>
+						<h3 translate="no" style="width: 100%; opacity: 1;">telegram stuff</h3>
 						<h3 style="width: 0px; opacity: 0; text-align: center; font-size: 0px;">channel</h3>
-						<div aria-label="Expand buttons below" tabindex="0" role="button" aria-pressed="false" style="display: none; transform: rotate(0turn);" class="logo_container pointer"><</div>
+						<div aria-label="Expand buttons below" tabindex="0" role="button" aria-pressed="false" style="display: none; transform: rotate(0turn);" class="logo_container pointer">&lt;</div> more
 					</button>
 				</a>
 				<div closed="true" style="display: none;" class="telegram-btns">
